# NewsCollection

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: collect_news.py
src/utils/: config_collections.py  mongodb_news_saver.py  news_fetcher.py
tests/: test_mongo_unit.py
